--- a/index.html
+++ b/index.html
@@ -6,18 +6,21 @@
     <meta name="description" content="Простой и красивый сайт">
     <title>Мой сайт</title>
     <link rel="stylesheet" href="style.css">
+    <script src="script.js" defer></script> <!-- Подключаем JS для открытия меню -->
 </head>
 <body>
     <header>
         <div class="container">
-            <h1>Привет, я сайт!</h1>
+            <h1>Привет, я ZIPER!</h1>
             <nav>
-                <ul>
-                    <li><a href="#about">О нас</a></li>
-                    <li><a href="#services">Услуги</a></li>
+                <ul class="menu">
+                    <li><a href="index.html">Главная</a></li>
+                    <li><a href="videos.html">Видео</a></li>
                     <li><a href="#contact">Контакты</a></li>
                 </ul>
             </nav>
+            <!-- Кнопка для открытия меню -->
+            <button class="menu-toggle" id="menu-toggle">&#9776;</button> <!-- Бургер-меню -->
         </div>
     </header>
 
@@ -28,21 +31,10 @@
         </div>
     </section>
 
-    <section id="services" class="section">
-        <div class="container">
-            <h2>Наши услуги</h2>
-            <ul>
-                <li>Создание сайтов</li>
-                <li>Дизайн интерфейсов</li>
-                <li>SEO оптимизация</li>
-            </ul>
-        </div>
-    </section>
-
     <section id="contact" class="section">
         <div class="container">
             <h2>Контакты</h2>
-            <p>Свяжитесь с нами по email: <a href="mailto:info@example.com">info@example.com</a></p>
+            <p>Свяжитесь с нами по email: <a href="mailto:artemnykorovych@gmail.com">artemnykorovych@gmail.com</a></p>
         </div>
     </section>
 
